add string I also want high-proof cloud

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div id="img-box">
             <img class="neu-img" src="qq.png" style="width: 60%;">
         </div>
-        <div id="not-sure">我也不知道是不是真的</div>
+        <div id="not-sure">我也不知道是不是真的<br />但我也想白嫖高防云</div>
         <div id="empty"> </div>
     </div>
 
